# x11-themes-aurora

./: README
aurora-engine/: Makefile.in  README  aclocal.m4  aurora.pc.in  configure  configure.ac
aurora-engine-1.5/: AUTHORS  ChangeLog  Makefile.am
aurora-engine-1.5/src/: animation.c  animation.h  aurora_draw.h  aurora_style.h  aurora_theme_main.c  config.h  support.c  support.h
aurora-engine/src/: aurora_draw.c  aurora_rc_style.c  aurora_rc_style.h  aurora_style.c  aurora_types.h  config.h.in
aurora-theme/gtk-2.0/: gtkrc
